<resources>
    <string name="app_name">Alarm App</string>
    <string name="alarm">Alarmes</string>
    <string name="add_new_alarm">Novo Alarme</string>
    <string name="sleep_time">Horas de Sono</string>
    <string name="set_time">Definir tempo</string>
    <string name="goal_description">Da meta</string>
    <string name="sleep_goal">Meta de sono</string>
    <string name="goal_down_alert">A baixo da sua meta de sono</string>
    <string name="goal_down_alert_hour">A baixo da sua meta de sono (&lt; 8hr)</string>
    <string name="set_alarm">Alarme</string>
    <string name="done">salvar</string>
    <string name="wake_up">Acordar</string>
    <string name="enable_alarm">Ativar alarme</string>
    <string name="alarm_sound">Som do alarme</string>
    <string name="snooze">Soneca</string>
    <string name="active_alarm">Ativar alarme</string>
    <string name="active_snooze">Ativar soneca</string>
    <string name="week_days">Dias da semana</string>
    <string name="save">salvar</string>
    <string name="all_week_days">Todos os dias</string>
    <string name="never">Nunca</string>
    <string name="alarm_save">O alarme disparará em %1$d horas e %2$d minutos</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda-Feira</string>
    <string name="tuesday">Terça-Feira</string>
    <string name="wednesday">Quarta-Feira</string>
    <string name="thursday">Quinta-Feira</string>
    <string name="friday">Sexta-Feira</string>
    <string name="saturday">Sábado</string>
    <string name="delete">Excluir</string>
    <string name="edit">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="attention">Atenção</string>
    <string name="close_warning">Se sair agora, perderá as alterações</string>
    <string name="close_confirm">Realmente deseja sair?</string>
    <string name="close">Sair sem salvar</string>
    <string name="close_save">Salvar e sair</string>
    <string name="channel_name">NOTIFICATION_CHANNEL_NAME</string>
    <string name="channel_description">NOTIFICATION_CHANNEL_DESCRIPTION</string>
    <string name="stop">Pare</string>
    <string name="notification_hour">Já são %s horas</string>
</resources>