<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlConfirmAlarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_shadow">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:strokeWidth="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/white"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWarningTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/attention"
                android:textAlignment="center"
                android:textColor="@color/red_400"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWarningMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvWarningTitle"
                android:layout_marginTop="16dp"
                android:text="@string/close_warning"
                android:textAlignment="center"
                android:textColor="@color/blue_800"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWarningConfirmMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvWarningMessage"
                android:layout_marginTop="10dp"
                android:text="@string/close_confirm"
                android:textAlignment="center"
                android:textColor="@color/blue_800"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvWarningConfirmMessage"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btConfirmClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/white"
                    android:text="@string/close"
                    android:textColor="@color/red_500"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btConfirmSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/close_save" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>